--- a/static/css/__includes/groups.less
+++ b/static/css/__includes/groups.less
@@ -4,6 +4,18 @@
     line-height: 80px;
     text-align: center;
   }
+  &__cover {
+    max-width: 100%;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  &__text {
+    margin-bottom: 10px;
+  }
+  &__button {
+    margin: 20px 0;
+    text-align: center;
+  }
   &-list {
     &-item {
       -webkit-box-shadow: inset 0 0 3px #101b3f;
@@ -13,10 +25,12 @@
       margin: 0 10px 20px 0;
       &__title {
         padding: 5px 5px 5px 20px;
-        color: #fff;
-        text-transform: uppercase;
-        text-shadow: 0 0 2px #000;
-        font-weight: bold;
+        a {
+          color: #fff;
+          text-transform: uppercase;
+          text-shadow: 0 0 2px #000;
+          font-weight: bold;
+        }
       }
       &-content {
         &__cover {
