--- a/apps/groups/templates/groups/group_list.html
+++ b/apps/groups/templates/groups/group_list.html
@@ -40,7 +40,7 @@
 
       <div class="col-4">
         <div class="theme panel panel-success">
-          <p class="theme__title panel-heading">Темы:</p>
+          <p class="theme__title panel-heading"><a href="{% url 'forum:list' %}">Темы:</a></p>
           {% for group in '1234' %}
           <div class="theme-item">
             <div class="theme-item__title"><a href="">Название темы очень длинное, ну очень длинное</a></div>
