--- a/apps/groups/templates/groups/groups_detail.html
+++ b/apps/groups/templates/groups/groups_detail.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block top_js %}
+  {{ comment_form.media }}
+{% endblock %}
 {% block wrapper_style %}class="travels__bg"{% endblock %}
 {% block content %}
   <div class="container">
