--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1137,3 +1137,104 @@ label.error {
   font-size: 12px;
   display: block;
 }
+.forum__title {
+  line-height: 80px;
+  text-align: center;
+}
+.forum-theme {
+  margin-bottom: 40px;
+}
+.forum-theme__title {
+  padding: 10px;
+  font-weight: bold;
+  font-size: 16px;
+  text-shadow: 0 0 1px #fff;
+}
+.forum-theme-container-list {
+  list-style: none;
+}
+.forum-theme-container-list-item {
+  display: block;
+  border: 1px solid #c8e5bc;
+}
+.forum-theme-container-list-item:hover {
+  background: #eafbdc;
+}
+.forum-theme-container-list-item dl {
+  padding: 5px;
+}
+.forum-theme-container-list-item dl dt {
+  display: inline-block;
+  width: 80%;
+}
+.forum-theme-container-list-item dl dd {
+  vertical-align: top;
+  display: inline-block;
+  width: 19%;
+}
+.forum .themes__title {
+  font-weight: bold;
+}
+.forum .themes__author {
+  font-weight: bold;
+  font-size: 12px;
+}
+.forum .themes__created {
+  font-size: 12px;
+  color: #999;
+}
+.comment {
+  padding: 20px 0 40px;
+}
+.comment__header {
+  font-size: 24px;
+  font-weight: bold;
+  padding-bottom: 40px;
+}
+.comment__auth-text {
+  padding: 20px 0;
+}
+.comment__auth-text a {
+  margin-right: 20px;
+}
+.comment-item {
+  margin-bottom: 20px;
+  background: rgba(255, 255, 255, 0.5);
+}
+.comment-item:hover {
+  background: #fff;
+  -webkit-box-shadow: 0 0 5px #666;
+  -moz-box-shadow: 0 0 5px #666;
+  box-shadow: 0 0 5px #666;
+}
+.comment-item__title {
+  padding: 10px;
+}
+.comment-item__user {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.comment-item__created {
+  color: #999;
+  float: right;
+  padding-left: 20px;
+}
+.comment-item-text {
+  padding: 10px;
+}
+.comment-item-text__avatar {
+  display: inline-block;
+  width: 20%;
+  text-align: center;
+  vertical-align: top;
+}
+.comment-item-text__avatar img {
+  width: 124px;
+  -webkit-border-radius: 124px;
+  -moz-border-radius: 124px;
+  border-radius: 124px;
+}
+.comment-item-text__content {
+  display: inline-block;
+  width: 79%;
+}
