--- a/static/css/style.less
+++ b/static/css/style.less
@@ -767,3 +767,5 @@ label.error {
 @import "__includes/article.less";
 @import "__includes/profile.less";
 @import "__includes/groups.less";
+@import "__includes/forum.less";
+@import "__includes/comment.less";
