--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
   <meta name="description" content="{{ setup.meta_desc|striptags|default:'' }}"/>
   <meta name="keywords" content="{{ setup.meta_key|striptags|default:'' }}"/>
   {{ setup.top_js|safe|default:'' }}
+  {% block top_js %}
+  {% endblock %}
   <script src="{{ STATIC_URL }}js/lib/jquery-1.11.2.min.js"></script>
   <script src="{{ STATIC_URL }}js/lib/jquery.validate.js"></script>
   <script src="{{ STATIC_URL }}js/lib/jquery.form.js"></script>
@@ -44,5 +46,6 @@
 </div>
 {% include "__includes/login.html" %}
 {{ setup.bottom_js|safe|default:'' }}
+
 </body>
 </html>
