--- a/static/css/__includes/forum.less
+++ b/static/css/__includes/forum.less
@@ -3,6 +3,25 @@
     line-height: 80px;
     text-align: center;
   }
+  &-button {
+    &__add {
+      margin: 20px 0;
+    }
+  }
+  &-add {
+    &-form {
+      input[type=text], select {
+          width: 400px;
+      }
+      label {
+        display: block;
+        margin-top: 20px;
+      }
+      .btn {
+        margin: 20px 0;
+      }
+    }
+  }
   &-theme {
     margin-bottom: 40px;
     &__title {
