--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1079,6 +1079,12 @@ label.error {
   margin: 20px 0;
   text-align: center;
 }
+.groups-info-list {
+  list-style: none;
+}
+.groups-info-list-item {
+  font-weight: bold;
+}
 .groups-list-item {
   -webkit-box-shadow: inset 0 0 3px #101b3f;
   -moz-box-shadow: inset 0 0 3px #101b3f;
@@ -1140,6 +1146,19 @@ label.error {
 .forum__title {
   line-height: 80px;
   text-align: center;
+}
+.forum-button__add {
+  margin: 20px 0;
+}
+.forum-add-form input[type=text], .forum-add-form select {
+  width: 400px;
+}
+.forum-add-form label {
+  display: block;
+  margin-top: 20px;
+}
+.forum-add-form .btn {
+  margin: 20px 0;
 }
 .forum-theme {
   margin-bottom: 40px;
