--- a/static/css/__includes/groups.css
+++ b/static/css/__includes/groups.css
@@ -17,6 +17,12 @@
   margin: 20px 0;
   text-align: center;
 }
+.groups-info-list {
+  list-style: none;
+}
+.groups-info-list-item {
+  font-weight: bold;
+}
 .groups-list-item {
   -webkit-box-shadow: inset 0 0 3px #101b3f;
   -moz-box-shadow: inset 0 0 3px #101b3f;
