--- a/static/css/__includes/groups.less
+++ b/static/css/__includes/groups.less
@@ -16,6 +16,14 @@
     margin: 20px 0;
     text-align: center;
   }
+  &-info {
+    &-list {
+      list-style: none;
+      &-item {
+        font-weight: bold;
+      }
+    }
+  }
   &-list {
     &-item {
       -webkit-box-shadow: inset 0 0 3px #101b3f;
