--- a/apps/forum/templates/forum/theme_list.html
+++ b/apps/forum/templates/forum/theme_list.html
@@ -20,7 +20,9 @@
                   <span class="themes__author">Автор: {% if theme.user.first_name %}{{ theme.user.last_name|default:'' }} {{ theme.user.first_name|default:'' }}{% else %}{{ theme.user }}{% endif %}</span>
                   <span class="themes__created"> {{ theme.created }}</span>
                 </dt>
-                <dd><span class="themes__answer">Ответов: 1</span></dd>
+                <dd>
+                  <span class="themes__answer">Ответов: {{ theme.themecomment_set.all|length }}</span>
+                </dd>
               </dl>
             </li>
           {% endfor %}
