--- a/apps/forum/templates/forum/theme_list.html
+++ b/apps/forum/templates/forum/theme_list.html
@@ -4,7 +4,7 @@
     <div class="forum">
       <h1 class="forum__title">Вопросы и ответы</h1>
       <div class="panel panel-success forum-theme">
-      {% if user.is_autheticated %}
+      {% if user.is_authenticated %}
         <a href="{% url 'forum:add' %}" class="btn btn-success forum-button__add">Создать новую тему</a>
       {% endif %}
         <div class="panel-heading forum-theme__title">
