--- a/apps/travel/templates/travel/travel_list.html
+++ b/apps/travel/templates/travel/travel_list.html
@@ -48,7 +48,7 @@
       <div class="travels-author-item">
         <div class="travels-author-item__avatar"><img src="{% if user.avatar %}{{ user.avatar.image.url }}{% else %}{{ STATIC_URL }}img/no_avatar.gif{% endif %}" alt=""></div>
         <div class="travels-author-item-content">
-          <p class="travels-author-item-content__name">{{ user }}</p>
+          <p class="travels-author-item-content__name">{% if user.last_name %}{{ user.last_name }} {{ user.first_name }}{% else %}{{ user }}{% endif %}</p>
           <p class="travels-author-item-content__text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias in tempore velit. A accusamus asperiores aspernatur consequuntur corporis culpa cum dolorem enim expedita minima nulla odio officiis, temporibus vitae voluptatem.
           </p>
