--- a/apps/travel/templates/travel/travel_list.html
+++ b/apps/travel/templates/travel/travel_list.html
@@ -44,7 +44,7 @@
     <div class="travels-author">
       <p class="title_middle text-center">Наши авторы</p>
       {% for user in author_list %}
-{#      {% if user.travelreview_set.all %}#}
+      {% if user.travelreview_set.all %}
       <div class="travels-author-item">
         <div class="travels-author-item__avatar"><img src="{% if user.avatar %}{{ user.avatar.image.url }}{% else %}{{ STATIC_URL }}img/no_avatar.gif{% endif %}" alt=""></div>
         <div class="travels-author-item-content">
@@ -56,7 +56,7 @@
         </div>
         <div class="clear"></div>
       </div>
-{#      {% endif %}#}
+      {% endif %}
       {% endfor %}
     {% if user.is_authenticated %}
       <a href="{% url 'travel:add' %}" class="button">Новая публикация</a>
