--- a/templates/__includes/footer.html
+++ b/templates/__includes/footer.html
@@ -21,7 +21,7 @@
     <div class="col-third">
       <span class="footer__title">Контакты</span>
       <ul class="footer-contacts">
-        <li class="footer-contacts__item icon icon-letter">email: <a href="mailto:manager@vlifte.pro">manager@vlifte.pro</a></li>
+        <li class="footer-contacts__item icon icon-letter">email: <a href="mailto:manager@enjoy-africa.ru">manager@enjoy-africa.ru</a></li>
       </ul>
     </div>
     <div class="clear"></div>
