--- a/apps/forum/templates/forum/theme_list.html
+++ b/apps/forum/templates/forum/theme_list.html
@@ -16,7 +16,7 @@
             <li class="forum-theme-container-list-item">
               <dl>
                 <dt>
-                  <a href="{{ theme.get_absolute_url }}" class="themes__title">Название темы</a><br>
+                  <a href="{{ theme.get_absolute_url }}" class="themes__title">{{ theme.title }}</a><br>
                   <span class="themes__author">Автор: {% if theme.user.first_name %}{{ theme.user.last_name|default:'' }} {{ theme.user.first_name|default:'' }}{% else %}{{ theme.user }}{% endif %}</span>
                   <span class="themes__created"> {{ theme.created }}</span>
                 </dt>
