--- a/static/css/style.less
+++ b/static/css/style.less
@@ -9,6 +9,8 @@ body {
 }
 #wrapper {
   min-height: 100%;
+  height: auto !important;
+  height: 100%;
   width: 1280px;
   margin: 0 auto -50px;
   -webkit-box-shadow: 0 0 10px #333;
@@ -675,8 +677,8 @@ label.error {
   }
   .icon {
     background-repeat: no-repeat;
-    -ms-background-position-y: 50%;
-    background-position-y: 50%;
+    -ms-background-position: 0 50%;
+    background-position: 0 50%;
     padding-left: 25px;
     &-phone {
       background-image: url('../img/phone_ico.png');
