--- a/static/css/__includes/navigation.less
+++ b/static/css/__includes/navigation.less
@@ -9,7 +9,7 @@ nav {
         display: block;
         padding: 45px 20px 5px;
         background-repeat: no-repeat;
-        background-position-x: 50%;
+        background-position: 50% 0;
         -webkit-background-size: 50px;
         background-size: 50px;
         color: #f1f1f1;
