--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,7 +10,7 @@ nav ul li a {
   display: block;
   padding: 45px 20px 5px;
   background-repeat: no-repeat;
-  background-position-x: 50%;
+  background-position: 50% 0;
   -webkit-background-size: 50px;
   background-size: 50px;
   color: #f1f1f1;
@@ -61,6 +61,8 @@ body {
 }
 #wrapper {
   min-height: 100%;
+  height: auto !important;
+  height: 100%;
   width: 1280px;
   margin: 0 auto -50px;
   -webkit-box-shadow: 0 0 10px #333;
@@ -711,8 +713,8 @@ label.error {
 }
 .footer .icon {
   background-repeat: no-repeat;
-  -ms-background-position-y: 50%;
-  background-position-y: 50%;
+  -ms-background-position: 0 50%;
+  background-position: 0 50%;
   padding-left: 25px;
 }
 .footer .icon-phone {
