--- a/static/css/__includes/navigation.less
+++ b/static/css/__includes/navigation.less
@@ -5,6 +5,8 @@ nav {
     margin-top: 15px;
     li {
       display: inline-block;
+      vertical-align: top;
+      text-align: center;
       a {
         display: block;
         padding: 45px 20px 5px;
@@ -34,6 +36,9 @@ nav {
         }
         &-reviews {
           background-image: url('../img/menu-icon-reviews.png');
+        }
+        &-faq {
+          background-image: url('../img/menu-icon-faq.png');
         }
       }
     }
