--- a/templates/__includes/footer.html
+++ b/templates/__includes/footer.html
@@ -16,6 +16,7 @@
         <li class="footer-menu__item"><a href="{% url 'about:list' %}">О нас</a></li>
         <li class="footer-menu__item"><a href="{% url 'travel:list' %}">Журнал путешествий</a></li>
         <li class="footer-menu__item"><a href="{% url 'groups:list' %}">Групповые туры</a></li>
+        <li class="footer-menu__item"><a href="{% url 'forum:list' %}">Вопросы и ответы</a></li>
       </ul>
     </div>
     <div class="col-third">
