--- a/static/css/__includes/groups.css
+++ b/static/css/__includes/groups.css
@@ -81,3 +81,27 @@
   font-size: 12px;
   display: block;
 }
+.group-select {
+  display: inline-block;
+  vertical-align: top;
+  position: relative;
+  background-color: #c8e5bc;
+  width: 130px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+.group-select-title {
+  font-weight: bold;
+  cursor: pointer;
+}
+.group-select-list {
+  position: absolute;
+  z-index: 99;
+  list-style: none;
+  background-color: #c8e5bc;
+  width: 130px;
+  display: none;
+}
+.group-select-list a {
+  color: #333333;
+}
