--- a/static/css/__includes/groups.less
+++ b/static/css/__includes/groups.less
@@ -101,3 +101,31 @@
     }
   }
 }
+
+.group {
+  &-select {
+    display: inline-block;
+    vertical-align: top;
+    position: relative;
+    background-color: #c8e5bc;
+    width: 130px;
+    text-align: center;
+    margin-bottom: 10px;
+    &-title {
+      font-weight: bold;
+      cursor: pointer;
+    }
+    &-list {
+      position: absolute;
+      z-index: 99;
+      list-style: none;
+      background-color: #c8e5bc;
+      width: 130px;
+      //padding: 10px;
+      display: none;
+      a {
+        color: #333333;
+      }
+    }
+  }
+}
