--- a/static/css/__includes/travel.css
+++ b/static/css/__includes/travel.css
@@ -3,7 +3,7 @@
 }
 .travels__bg {
   background-image: url('../img/travels__bg.jpg');
-  background-size: 100%;
+  background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
