--- a/static/css/__includes/travel.less
+++ b/static/css/__includes/travel.less
@@ -2,7 +2,7 @@
   padding: 30px 0;
   &__bg {
     background-image: url('../img/travels__bg.jpg');
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
   }
