--- a/apps/groups/templates/groups/group_list.html
+++ b/apps/groups/templates/groups/group_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% block title %}{{ meta_title|default:'' }}{% endblock %}
-{% block meta_desc %}{{ meta_desc|default:'' }}{% endblock %}
-{% block meta_keys %}{{ meta_keys|default:'' }}{% endblock %}
+{% block title %}{{ seo.meta_title|default:'' }}{% endblock %}
+{% block meta_desc %}{{ seo.meta_desc|default:'' }}{% endblock %}
+{% block meta_keys %}{{ seo.meta_keys|default:'' }}{% endblock %}
 {% block content %}
   <div class="container">
     <div class="groups">
