--- a/static/css/__includes/groups.less
+++ b/static/css/__includes/groups.less
@@ -1,7 +1,8 @@
 .groups {
   margin-bottom: 40px;
   &__title {
-    line-height: 80px;
+    font-size: 24px;
+    padding: 20px 0;
     text-align: center;
   }
   &__cover {
