--- a/static/css/__includes/groups.css
+++ b/static/css/__includes/groups.css
@@ -2,7 +2,8 @@
   margin-bottom: 40px;
 }
 .groups__title {
-  line-height: 80px;
+  font-size: 24px;
+  padding: 20px 0;
   text-align: center;
 }
 .groups__cover {
