--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1098,7 +1098,8 @@ label.error {
   margin-bottom: 40px;
 }
 .groups__title {
-  line-height: 80px;
+  font-size: 24px;
+  padding: 20px 0;
   text-align: center;
 }
 .groups__cover {
