--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
   <script src="{{ STATIC_URL }}js/lib/bootstrap.min.js"></script>
   <script src="{{ STATIC_URL }}js/lib/notify-combined.min.js"></script>
   <script src="{{ STATIC_URL }}js/lib/scrollup.js"></script>
+  <script src="http://vk.com/js/api/openapi.js"></script>
   <script src="{{ STATIC_URL }}js/common.js"></script>
   <link href='http://fonts.googleapis.com/css?family=Marck+Script&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/__includes/reset.css">
