--- a/apps/groups/templates/groups/group_list.html
+++ b/apps/groups/templates/groups/group_list.html
@@ -5,7 +5,7 @@
 {% block content %}
   <div class="container">
     <div class="groups">
-      <h1 class="groups__title">{{ seo.meta_title|default:'Групповые туры' }}</h1>
+      <h1 class="groups__title">{{ seo.title|default:'Групповые туры' }}</h1>
       <div class="col-8">
         <div class="groups-list">
           Сортировать по
