--- a/apps/groups/templates/groups/groups_detail.html
+++ b/apps/groups/templates/groups/groups_detail.html
@@ -9,7 +9,7 @@
 {% block content %}
   <div class="container">
     <div class="groups">
-      <h1 class="groups__title">{{ group.travel }} {{ group.title|default:'' }}</h1>
+      <h1 class="groups__title">{{ group.title|default:'' }}</h1>
       <div class="groups-info">
         <table class="table">
           <tr>
