--- a/apps/forum/templates/forum/theme_list.html
+++ b/apps/forum/templates/forum/theme_list.html
@@ -5,7 +5,7 @@
 {% block content %}
   <div class="container">
     <div class="forum">
-      <h1 class="forum__title">{{ seo.meta_title|default:'Вопросы и ответы' }}</h1>
+      <h1 class="forum__title">{{ seo.title|default:'Вопросы и ответы' }}</h1>
       <div class="panel panel-success forum-theme">
       {% if user.is_authenticated %}
         <a href="{% url 'forum:add' %}" class="btn btn-success forum-button__add">Создать новую тему</a>
